qmi-prober: adding non-functional skeleton
Signed-off-by: Bjørn Mork <bjorn@mork.no>

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,8 @@
-all: wwan_ctl
+all: wwan_ctl qmi-prober
 
 wwan_ctl: wwan_ctl.c
 	gcc -o wwan_ctl wwan_ctl.c
+
+qmi-prober: qmi-prober.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
