cuseqmi: importing cusexmp.c unmodified
Signed-off-by: Bjørn Mork <bjorn@mork.no>

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,8 @@ CFLAGS_FUSE=$(shell pkg-config fuse --cflags)
 LDLIBS_FUSE=$(shell pkg-config fuse --libs)
 LDFLAGS=-Wall
 BINARIES=wwan_ctl qcqmifs
+CFLAGS_USB=$(shell pkg-config libusb-1.0 --cflags)
+LDLIBS_USB=$(shell pkg-config libusb-1.0 --libs)
 
 all: $(BINARIES)
 
@@ -15,6 +17,11 @@ wwan_ctl: wwan_ctl.c
 qmi-prober: qmi-prober.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
+libusbopen: libusbopen.c
+	$(CC) $(CFLAGS_USB) $(LDFLAGS) -o $@ $^ $(LDLIBS_USB)
+
 qcqmifs: qcqmifs.c
 	$(CC) $(CFLAGS) $(CFLAGS_FUSE) $(LDFLAGS) -o $@ $^ $(LDLIBS) $(LDLIBS_FUSE)
 
+cuseqmi: cuseqmi.c
+	$(CC) $(CFLAGS) $(CFLAGS_FUSE) $(LDFLAGS) -o $@ $^ $(LDLIBS) $(LDLIBS_FUSE)
