swi-sdk-firmware: sample SLQS application
Working now:

nemi:/home/bjorn# ~bjorn/privat/prog/git/wwan/src/swi-sdk-firmware 4
argc=2
setting sdk path to
/usr/local/src/git/swi-slqs/build/bin/hosti686/slqssdk
node=/dev/qcqmi0,  key=35907206000556
bar
foo
result: 0
001.008 000 01.09.06.00 GENERIC

Signed-off-by: Bjørn Mork <bjorn@mork.no>

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,15 @@ BINARIES=wwan_ctl qcqmifs flush-wdm
 CFLAGS_USB=$(shell pkg-config libusb-1.0 --cflags)
 LDLIBS_USB=$(shell pkg-config libusb-1.0 --libs)
 
+# Sierra Linux QMI SDK - partly from /usr/local/src/git/swi-slqs/pkgs/slqscompile.mak 
+SDKPATH=/usr/local/src/git/swi-slqs
+SDKCPU=hosti686
+CFLAGS_SDK=-m32 -Wall -Werror -Wextra -DSDK_EXE='$(SDKPATH)/build/bin/$(SDKCPU)/slqssdk'
+LDLIBS_SDK=-Wl,--start-group -lrt -lpthread -lslqsapi -lslqscore -lslqsqmi -Wl,--end-group
+LDFLAGS_SDK=-L/usr/lib32 -L$(SDKPATH)/build/lib/$(SDKCPU) -static
+inc_paths=$(shell echo $(SDKPATH)/api/*/inc)
+INCLUDE_SDK=-I$(SDKPATH)/api -I$(SDKPATH)/api/inc $(inc_paths:%=-I%)
+
 all: $(BINARIES)
 
 clean:
@@ -28,6 +37,9 @@ cuseqmi: cuseqmi.c
 
 swi-firmware: swi-firmware.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
+
+swi-sdk-firmware: swi-sdk-firmware.c
+	$(CC) $(CFLAGS_SDK) $(INCLUDE_SDK) $(LDFLAGS_SDK) -static -lrt -lpthread -o $@ $^ $(LDLIBS_SDK)
 
 flush-wdm: flush-wdm.c
 	$(CC) $(CFLAGS_USB) $(LDFLAGS) -o $@ $^ $(LDLIBS_USB)
